# rustify

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release-builds.yml
src/: cache.rs  lastfm.rs  main.rs  matcher.rs  player.rs  scrobbler.rs
src/app/: mod.rs  state.rs  update.rs  view.rs
src/audio/: player.rs
src/features/: mod.rs
src/features/discord_rpc/: mod.rs
src/features/scrobbling/: cache.rs  lastfm.rs  matcher.rs  mod.rs  recommender.rs  scrobbler.rs
src/features/settings/: env.rs  mod.rs  theme.rs
