[package]
name = "rustify"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["tokio", "image"] }
rodio = { version = "0.20", features = ["symphonia-all"] }
rfd = "0.15"
walkdir = "2"
lofty = "0.22"
discord-rich-presence = "0.2"
dotenvy = "0.15"

reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["time"] }

serde_json = "1"
md5 = "0.7"
open = "5" # used only to open browser for auth
dirs = "5"
urlencoding = "2"
